--- a/src/TfsBot.Application/packages.config
+++ b/src/TfsBot.Application/packages.config
@@ -12,16 +12,22 @@
   <package id="Microsoft.ApplicationInsights.WindowsServer.TelemetryChannel" version="2.2.0" targetFramework="net46" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net46" />
   <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net46" />
+  <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net46" />
+  <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net46" />
+  <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.3" targetFramework="net46" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net46" />
   <package id="Microsoft.Azure.KeyVault.Core" version="1.0.0" targetFramework="net46" />
-  <package id="Microsoft.Bot.Builder" version="3.4.0" targetFramework="net46" />
+  <package id="Microsoft.Bot.Builder" version="3.9.0.0" targetFramework="net46" />
   <package id="Microsoft.Data.Edm" version="5.6.4" targetFramework="net46" />
   <package id="Microsoft.Data.OData" version="5.6.4" targetFramework="net46" />
   <package id="Microsoft.Data.Services.Client" version="5.6.4" targetFramework="net46" />
-  <package id="Microsoft.IdentityModel.Protocol.Extensions" version="1.0.2.206221351" targetFramework="net46" />
+  <package id="Microsoft.IdentityModel.Protocol.Extensions" version="1.0.4.403061554" targetFramework="net46" />
   <package id="Microsoft.Rest.ClientRuntime" version="2.3.2" targetFramework="net46" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net46" />
   <package id="Microsoft.WindowsAzure.ConfigurationManager" version="3.2.1" targetFramework="net46" />
+  <package id="MongoDB.Bson" version="2.4.4" targetFramework="net46" />
+  <package id="MongoDB.Driver" version="2.4.4" targetFramework="net46" />
+  <package id="MongoDB.Driver.Core" version="2.4.4" targetFramework="net46" />
   <package id="Newtonsoft.Json" version="8.0.3" targetFramework="net46" />
   <package id="SimpleInjector" version="3.3.2" targetFramework="net46" />
   <package id="SimpleInjector.Extensions.ExecutionContextScoping" version="3.3.2" targetFramework="net46" />
@@ -30,7 +36,8 @@
   <package id="SimpleInjector.Integration.WebApi" version="3.3.2" targetFramework="net46" />
   <package id="SimpleInjector.Integration.WebApi.WebHost.QuickStart" version="3.3.2" targetFramework="net46" />
   <package id="SimpleInjector.MVC3" version="3.3.2" targetFramework="net46" />
-  <package id="System.IdentityModel.Tokens.Jwt" version="4.0.2.206221351" targetFramework="net46" />
+  <package id="System.IdentityModel.Tokens.Jwt" version="4.0.4.403061554" targetFramework="net46" />
+  <package id="System.Runtime.InteropServices.RuntimeInformation" version="4.0.0" targetFramework="net46" />
   <package id="System.Spatial" version="5.6.4" targetFramework="net46" />
   <package id="WebActivator" version="1.4.4" targetFramework="net46" />
   <package id="WindowsAzure.Storage" version="7.2.0" targetFramework="net46" />
